--- a/inis/lab3-4/details.html
+++ b/inis/lab3-4/details.html
@@ -68,7 +68,6 @@
 
     info += '<h1>'+name+ '</h1>' + '<br>';
     info += '<h3>' + price + '</h3>' + '<br>';
-    //info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>';
 
 
 
@@ -79,23 +78,51 @@
 
 
 
+
+       function func()
+       {
+
+       }
 
 
     function buttonClickFront()
     {
-
+        info = '';
         temp_front = localStorage.getItem(localStorage.getItem('key')) + '_front';
 
         let part1 = '<img class ="color-view" id = "img' +localStorage.getItem('key')+'"' + " src = '" ;
         let part2 = localStorage.getItem(temp_front) + "'"+ '></img>';
 
+
+
         temp_back = localStorage.getItem(localStorage.getItem('key')) + '_back';
 
 
-        info = '';
+
         info += '<h1>'+name+ '</h1>' + '<br>';
         info += '<h3>' + price + '</h3>' + '<br>';
         info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+        if (variable1 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
+        }
+        if (variable2 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+        }
+        if (variable3 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' ;
+        }
+        if (variable4 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' ;
+        }
+        if (variable5 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+        }
+
         info += part1 + part2;
 
 
@@ -107,33 +134,42 @@
     function buttonClickBack()
     {
 
-
         info = '';
-
-
 
         info += '<h1>'+name+ '</h1>' + '<br>';
         info += '<h3>' + price + '</h3>' + '<br>';
+
         info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
 
-
-
+        if (variable1 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
+        }
+        if (variable2 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+        }
+        if (variable3 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' ;
+        }
+        if (variable4 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' ;
+        }
+        if (variable5 != null)
+        {
+            info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+        }
 
         temp_back = localStorage.getItem(localStorage.getItem('key')) + '_back';
-
-
 
 
         let part1 = '<img class ="color-view" id = "img' +localStorage.getItem('key')+'"' + " src = '" ;
         let part2 = localStorage.getItem(temp_back) + "'"+ '></img>';
 
 
-
-
-
         info += part1 + part2;
-
-
 
         console.log(info);
 
@@ -145,28 +181,42 @@
     if (variable1 != null)
     {
 
-
         info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1 +'"' +'>' + variable1+ '</button>' ;
 
         function buttonClick1()
         {
-
              info  = '';
+
             info += '<h1>'+name+ '</h1>' + '<br>';
             info += '<h3>' + price + '</h3>' + '<br>';
             info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+            info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1 +'"' +'>' + variable1+ '</button>' ;
 
-
-
-
+            if (variable2 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+            }
+            if (variable3 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' ;
+            }
+            if (variable4 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' ;
+            }
+            if (variable5 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+            }
 
             info += '<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>';
+
+
+
             document.getElementById('see_page2').innerHTML=info;
 
             console.log(info);
             localStorage.setItem('key', '1');
-
-
 
         }
 
@@ -184,9 +234,26 @@
             info += '<h1>'+name+ '</h1>' + '<br>';
             info += '<h3>' + price + '</h3>' + '<br>';
             info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+            info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
 
 
 
+            if (variable1 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
+            }
+            if (variable3 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' ;
+            }
+            if (variable4 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' ;
+            }
+            if (variable5 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+            }
 
 
             info += '<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>';
@@ -213,7 +280,26 @@
             info += '<h1>'+name+ '</h1>' + '<br>';
             info += '<h3>' + price + '</h3>' + '<br>';
             info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+            info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>';
 
+
+
+            if (variable1 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
+            }
+            if (variable2 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+            }
+            if (variable4 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' ;
+            }
+            if (variable5 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+            }
 
 
 
@@ -244,8 +330,26 @@
             info += '<h1>'+name+ '</h1>' + '<br>';
             info += '<h3>' + price + '</h3>' + '<br>';
             info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+            info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>';
 
 
+
+            if (variable1 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
+            }
+            if (variable2 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+            }
+            if (variable3 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' ;
+            }
+            if (variable5 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+            }
 
 
             info += '<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>';
@@ -270,8 +374,27 @@
             info += '<h1>'+name+ '</h1>' + '<br>';
             info += '<h3>' + price + '</h3>' + '<br>';
             info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+            info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
 
 
+
+
+            if (variable1 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
+            }
+            if (variable2 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+            }
+            if (variable3 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' ;
+            }
+            if (variable4 != null)
+            {
+                info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' ;
+            }
 
 
             info += '<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>';
