--- a/inis/lab3-4/details.html
+++ b/inis/lab3-4/details.html
@@ -49,9 +49,6 @@
 
 
 
-
-
-
     let price = localStorage.getItem('price');
     let name = '<h1>'+localStorage.getItem('name')+'</h1>';
     let image = localStorage.getItem('image');
@@ -71,18 +68,13 @@
 
 
 
+    function add_info(name,price,)
+    {
+        let myinfo = '';
 
 
+    }
 
-
-
-
-
-
-       function func()
-       {
-
-       }
 
 
     function buttonClickFront()
@@ -94,7 +86,6 @@
         let part2 = localStorage.getItem(temp_front) + "'"+ '></img>';
 
 
-
         temp_back = localStorage.getItem(localStorage.getItem('key')) + '_back';
 
 
@@ -102,6 +93,7 @@
         info += '<h1>'+name+ '</h1>' + '<br>';
         info += '<h3>' + price + '</h3>' + '<br>';
         info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
+
         if (variable1 != null)
         {
             info += '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1+'"' +'>' + variable1+ '</button>' ;
