--- a/evt.html
+++ b/evt.html
@@ -18,9 +18,11 @@
     <ul>
         <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
         <a href ="evt/lab1/first_lab.html"><li><i class="fa-solid fa-house"></i> ЛР 1 |   "Фильмы"</li></a>
-        <a href ="evt/lab2/second_lab_index.html"><li><i class="fa-solid fa-house"></i> ЛР 2 |   "Футболки"</li></a>
+        <a href ="evt/lab2/second_lab_index.html"><li><i class="fa-solid fa-house"></i> ЛР 2 |   "T-Shirts"</li></a>
         <a href ="evt/lab3/3_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 3 |   "Flex"</li></a>
         <a href ="evt/lab4/4_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 4 |   "Grid"</li></a>
+        <a href ="evt/lab5/5_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 5 |   "Adaptive"</li></a>
+        <a href ="evt/lab6/5_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 6 |   "Animation"</li></a>
     </ul>
 </aside>
 <main>
