--- a/inis/testLab6/index.html
+++ b/inis/testLab6/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="box"></div>
+<div id="box" style="width: 300px; height: 300px; background: red;"></div>
 
 <script>
     const box = document.getElementById('box');
