Make test lab6 INIS

--- a/inis/testLab6/index.html
+++ b/inis/testLab6/index.html
@@ -57,8 +57,7 @@
 
         // Отключаем трансформацию элемента, чтобы он оставался на новом месте
         draggable.style.transform = "none";
-
-        // Отключаем стандартное повед
+        event.preventDefault();
     });
 </script>
 
